# AI_Code_Samples

Automated-Logo-Generation/: .gitignore  Automated-Logo-Generation.ipynb  Readme.md  pyproject.toml  requirements.txt
CompanyLogoGenerator/: AutomatedLogoGeneration.ipynb  Readme.md  main.py  pyproject.toml  requirements.txt
CompanyLogoGenerator/.ipynb_checkpoints/: AutomatedLogoGeneration-checkpoint.ipynb  Readme-checkpoint.md
